tests/error/type_errors/fun_item_ty_mismatch_generic.err
Error: Different types (at $FILE:21:11)
   | 
19 |     else:
20 |         baz = bar
21 |     return baz(42)
   |            ^^^ Variable `baz` may refer to different types

Notes:
   | 
17 |     if b:
18 |         baz = foo
   |         --- This is of type `def foo(x: T) -> T`
19 |     else:
20 |         baz = bar
   |         --- This is of type `def bar(x: T) -> T`

Help: Consider adding type annotations to coerce them into opaque function
values: `baz: Function[[?T], ?T] = ...`

Guppy compilation failed due to 1 previous error
